* fix scroll behaviour on small devices

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -67,34 +67,9 @@ body {
 @include media-breakpoint-down(md) {
 
   .flex-main{
-    overflow-y: hidden;
-
-    > .card {
-      height: 100%;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
-      > .card-header {
-        position: absolute;
-        z-index: 1;
-        right: 0;
-        left: 0;
-      }
-      > .table {
-        margin-top: 51px;
-        &.filtered {
-          margin-top: 60.5px;
-        }
-      }
-    }
-
-    &.text-content{
-      h1, h2{
-        padding-top: inherit;
-      }
-      height: 100%;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch;
-    }
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   .flex-content {
@@ -104,6 +79,11 @@ body {
     -webkit-transition: all .25s ease-out;
          -o-transition: all .25s ease-out;
             transition: all .25s ease-out;
+  }
+
+  .text-content{
+    padding: 0 15px;
+    
   }
 
   .flex-content.active {
